# openchad

./: .eslintignore  .gitignore  .prettierignore  Cargo.toml  bot.json  bot.schema.json  nx.json  package.json  pnpm-lock.yaml
api/: Cargo.toml
api/migrations/: 20230323114300_ChatHistory.sql
api/sql/: ChatHistoryCategorize.sql  ChatHistoryFull.sql  ChatHistoryInsert.sql
api/src/: botconfig.rs  chat.rs  main.rs  search.rs
apps/openchad-portal/: .eslintrc.json  package.json  pnpm-lock.yaml  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
apps/openchad-portal/public/: manifest.json
apps/openchad-portal/public/images/: chad.avif
apps/openchad-portal/src/: entry.ssr.tsx  root.tsx
apps/openchad-portal/src/components/: footer.tsx  function-editor.tsx  function-select.tsx  header.tsx  monaco-editor.css  monaco-editor.tsx  router-head.tsx  text-area-grow.css  text-area-grow.tsx
apps/openchad-portal/src/components/header/: nav.tsx
apps/openchad-portal/src/components/router-head/: router-head.tsx
apps/openchad-portal/src/routes/: index.tsx  layout.tsx
apps/openchad-portal/src/routes/flower/: flower.css  index.tsx
apps/openchad-portal/src/types/: Dobri-A03.json  bot-config.ts  jinja2.ts
common/: Cargo.toml
common/src/: lib.rs
providers/: bing.json  providers.schema.json
schemas/: Cargo.toml
schemas/src/: botconfig.rs  chat.rs  lib.rs  provider.rs  search.rs
src/: main.rs
