[package]
name = "openchad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1", features = ["full"] }
architectury = { git = "https://github.com/carterisonline/architectury" }
chrono = "0.4"
once_cell = "1"
reqwest = { version = "0.11", features = ["json", "native-tls", "stream"] }
reqwest-streams = { version = "0.2", features = ["json"] }
tap = "1"
openchad-schemas = { path = "./schemas" }

[workspace]
members = ["api", "schemas"]
