[package]
name = "openchad-api"
version = "0.1.0"
edition = "2021"

[dependencies]
architectury = { git = "https://github.com/carterisonline/architectury", version = "0.4" }
async-stream = "0.3"
axum = { version = "0.6", features = ["macros", "http2"] }
axum-streams = { version = "0.8", features = ["json"] }
chrono = "0.4"
eyre = "0.6"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = [
    "json",
    "async-compression",
    "native-tls",
] }
reqwest-streams = { version = "0.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "any",
    "sqlite",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
openchad-schemas = { path = "../schemas" }
minijinja = "0.30.7"
tap = "1.0.1"
async-recursion = "1.0.4"
once_cell = "1.17.1"
