[package]
name = "openchad-schemas"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["indexmap1"] }
indexmap = { version = "1.9", features = ["serde-1"] }

[dev-dependencies]
architectury = { git = "https://github.com/carterisonline/architectury" }
